<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.bounswe.heka.register.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/LoginFragment" >
            <argument
                android:name="email"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.bounswe.heka.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/RegisterFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.bounswe.heka.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/TimelineFragment"
        android:name="com.bounswe.heka.timeline.TimelineFragment"
        android:label="@string/suggested_posts"
        tools:layout="@layout/fragment_timeline">
    </fragment>
    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.bounswe.heka.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
</navigation>